--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,12 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CI-Test
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches:
   pull_request:
     branches: [ master ]
 
@@ -31,3 +31,20 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
+
+  upload:
+    name: upload file
+    runs-on: ubuntu-latest
+    steps:
+
+    # artifactのアップロード
+    - uses: actions/checkout@v2
+
+    - run: mkdir -p path/to/artifact
+
+    - run: echo hello > path/to/artifact/world.txt
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: my-artifact
+        path: path/to/artifact/world.txt
